--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,8 @@ ipython_config.py
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
+.DS_Store
+
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
